@@ -9,6 +9,7 @@
 - Improved: [#17059] Show Tile Inspector usage hint when nothing is selected.
 - Change: [#16952] Make “Object Selection” order more coherent.
 - Removed: [#16864] Title sequence editor (replaced by plug-in).
+- Fix: [#13997] Placing a track design interferes with other players building a ride.
 - Fix: [#16934] Park size displayed incorrectly in Park window.
 - Fix: [#16974] Small scenery ghosts can be deleted.
 - Fix: [#17005] Unable to set patrol area for first staff member in park.
